# KansperIDE

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mobile.rs
src-tauri/src/compiler/: ast.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
src/components/: Console.tsx  Editor.tsx  FileIcon.tsx  FilePreview.tsx  GraphCanvas.tsx  MenuBar.tsx  SaveDialog.tsx
src/hooks/: useFileSystem.ts  useRusCompiler.ts
